fixed gaps

--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -9,7 +9,7 @@
   .content {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 8rem;
     padding: 3rem 0;
     width: 100%;
   }
