--- a/src/pages/home/ProjectPreview.module.scss
+++ b/src/pages/home/ProjectPreview.module.scss
@@ -3,6 +3,7 @@
 .content {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 
   .heading {
     .title {
@@ -11,7 +12,7 @@
         family: "Bebas Neue", sans-serif;
         size: 2.5rem;
       }
-      margin: 2rem 0 0.5rem 0;
+      margin: 0 0 0.5rem 0;
     }
 
     .btns {
